# sim

./: Dockerfile  build_latex.bat  build_latex_tactile.bat  config.ini  hutbthesis_main.aux  hutbthesis_main.bcf  hutbthesis_main.out  hutbthesis_main.toc  launch.py  undergraduate  目标检测.txt
.github/workflows/: CICID.yml  latex.yml
2209040027-liuwenjie/undergraduate/: .gitignore  README.txt
chrono/: README.md
chrono/content/: chapter1.tex  论文提纲.tex
chrono/undergraduate/: hutbthesis_main.bbl-SAVE-ERROR  hutbthesis_main.tex
co/: README.md  main.tex  基于高保真模拟器的车辆与飞行器协同控制_main.tex
co/Cooperative Control of Vehicles and Aircraft Based on High-Fidelity Simulator/: hutbthesis_main.out  hutbthesis_main.tex
co/config/: controllers.yaml
co/keyboard_control/: config.ini  keyboard_control.py
critical/: ASIL-II  Code  README.md  __init__.py  attention_agent.py  attention_network.py  base_agent.py  clip_utils.py  combined_fog_ghost.py  combined_night_pedestrian.py  compare.py  data_saver.py  dqn_config.py  emergency_brake.py  evaluate.py  geometry_utils.py  hutbthesis.cls  jaywalking.py  main.py  metrics.py  network.py  pedestrian_cross.py  replay_buffer.py  requirements.txt  run_attention_dqn.py  sensor_utils.py  smooth_network.py  storage.py
ddqn/: README.md
fei/: README.md
hci/: README.md
kinesis/: KIT数据集说明.md  README.md  SMPL文件格式说明.md  auto_config.py  auto_setup.py  chapter3.tex  chapter4.tex  chapter5.tex  check_files.py  check_setup.py  check_smpl.py  cmdel.bat  config.py  content.tex  cover.tex  emg_comparison.ipynb  extract_kit.py  extract_now.py  fix_chumpy.py  hutbthesis.cls  hutbthesis_main.bbl  hutbthesis_main.tex  hutbthesis_main.toc  kit_test_keys.txt  kit_train_keys.txt  macos_requirements.txt  references.tex  requirements.txt  run.bat  setup.py  setup_all.py  test_smplx.py  一键配置.py  下载指南.md  基于运动模仿的生物合理肌肉骨骼运动控制算法研究(3)(4).docx  快速开始.md  运行指南.md  配置指南.md
landing/: README.md
mcp/: README.md  mcp.txt  论文第一章.tex
mcp/sim/: README.md  main.py  mcp_config_example.json  pyproject.toml  run_server.bat  server.py  setup_env.bat  test_import.py
mcp/sim/hutb_mcp/: __init__.py  __main__.py  config.py  connection.py  server.py
mcp/sim/hutb_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/sim/hutb_mcp/tools/: __init__.py  air_tools.py  editor_tools.py  sensor_tools.py  vehicle_tools.py  weather_tools.py
mcp/sim/hutb_mcp/utils/: __init__.py  logger.py
mot/: hutbthesis.cls  hutbthesis_main.aux  hutbthesis_main.bbl  hutbthesis_main.bcf  hutbthesis_main.blg  hutbthesis_main.toc
osm/: README.md
pedestrian/: README.md
scene/: .gitignore
sim/: 代码
swarm/: README.md
swarm/code/airsim-swarm-opt/src/thread_benchmark/: CMakeLists.txt  benchmark.cpp  thread_models.h
swarm/code/airsim-swarm-opt/v2_struct/src/thread_benchmark/: CMakeLists.txt
tactile/: README.md
vsc/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  gitignore  hutb-simulator-dev-0.1.0.vsix  hutbthesis_main.tex  latexmkrc  launch.json  manual_extension_test.py  manual_test_guide.txt  manual_test_output.txt  package.json  settings.json  tasks.json  tsconfig.json  write_txt_demo.py
(+812 files in other folders)
